# Lunatic_Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/Models/: cornellbox.glb  cube.glb
shaders/: atrous_filter.frag  atrous_filter.frag.spv  atrous_filter.vert  blur_horizontal.frag  blur_horizontal.frag.spv  blur_vertical.frag  blur_vertical.frag.spv  frustum_cull.comp  frustum_cull.comp.spv  gbuffer.frag  gbuffer.frag.spv  gbuffer.vert  gbuffer.vert.spv  helper_functions.glsl  indirect_lighting_rsm.comp  indirect_lighting_rsm.comp.spv  indirect_lighting_rsm.frag  indirect_lighting_rsm.frag.spv  indirect_lighting_rsm.vert  indirect_lighting_temporal_resolve.comp  indirect_lighting_temporal_resolve.comp.spv  light_depth.frag  light_depth.vert  light_depth.vert.spv  light_reflective_shadows.frag  light_reflective_shadows.frag.spv  light_reflective_shadows.vert  light_reflective_shadows.vert.spv  lighting_deferred.frag  lighting_deferred.frag.spv  opaque_forward.frag  opaque_forward.frag.spv  opaque_forward.vert  opaque_forward.vert.spv  skinned_gbuffer.frag  skinned_gbuffer.frag.spv  skinned_gbuffer.vert  skinned_gbuffer.vert.spv  sky.comp  sky.comp.spv  (+19 more)
src/: CMakeLists.txt  camera.cpp  camera.h  main.cpp  vk_atrousfilterpass.cpp  vk_atrousfilterpass.h  vk_blurpass.cpp  vk_blurpass.h  vk_cascadeshadowpass.cpp  vk_cascadeshadowpass.h  vk_debug.cpp  vk_debug.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_frustumcompute.cpp  vk_frustumcompute.h  vk_gbufferpass.cpp  vk_gbufferpass.h  vk_images.cpp  vk_images.h  vk_indirectlightingaccumulation.cpp  vk_indirectlightingaccumulation.h  vk_indirectlightingrsmcompute.cpp  vk_indirectlightingrsmcompute.h  vk_initializers.cpp  vk_initializers.h  vk_lightingpass.cpp  vk_lightingpass.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_reflectiveshadowpass.cpp  vk_reflectiveshadowpass.h  vk_rendergraph.cpp  vk_rendergraph.h  vk_renderpass.cpp  vk_renderpass.h  (+13 more)
